[package]
name = "bevy_quick_action_hud"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.19", default-features = true, features = ["bevy_feathers"] }
serde = { version = "1", features = ["derive"] }
ron = "0.12"
bevy_tweening = "0.16"
leafwing-input-manager = "0.21"

[[example]]
name = "gamepad"
path = "examples/gamepad.rs"

[[example]]
name = "fps"
path = "examples/fps.rs"

[[example]]
name = "editor"
path = "examples/editor.rs"
